--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "RNN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPpDnHq62sPcRgIJW3llvbK",
+      "authorship_tag": "ABX9TyMljB9Uge8GpUzE9Hs+AfVt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,14 +21,14 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tuananht/long-short-term-memory/blob/main/RNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tuananht/long-short-term-memory/blob/master/RNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "kIng5uTFfTSW",
-        "outputId": "83cb306c-e81a-4e32-c386-c0cb85019c81",
+        "outputId": "e986352c-c09e-42c7-d387-081c13539f60",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33
@@ -53,7 +53,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "6X2mKH-teqnF",
-        "outputId": "0bea297b-7020-4f74-f95c-4063d34bd078",
+        "outputId": "d2799228-cb32-413f-d141-20018acc7f5d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 82
@@ -90,7 +90,7 @@
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
             "Reading CSV file...\n",
             "Parsed 79170 sentences\n"
           ],
@@ -102,7 +102,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Lt-Mb3q3h9qr",
-        "outputId": "c642ef7b-324a-41cc-d6f6-cb0e209fb791",
+        "outputId": "3eaf5561-0aef-4e15-9624-c6f464ee767e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33
@@ -129,7 +129,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Tw4zDnQNfSlU",
-        "outputId": "7a3f546a-da57-4bef-db92-f7eacda580b0",
+        "outputId": "6712b5e7-7a74-4320-cbd7-5df9d3994fed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
@@ -160,7 +160,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "IQnoIG-8i6Fe",
-        "outputId": "5a253281-cbc4-4262-b098-6146f329e94f",
+        "outputId": "b8e64e70-0f2b-4fd3-84d9-12fdb9b607ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -189,7 +189,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "27wV-q6gjY-R",
-        "outputId": "a2f4f4dd-534c-4c27-8866-3f17608b8f56",
+        "outputId": "4757dd19-3111-4a73-ad00-cb3c90a83ccc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 245
@@ -225,6 +225,108 @@
             " list([3, 4287, 19, 7999, 18, 174, 12, 232, 74, 101, 1292, 14, 24, 161, 8, 12, 6, 160, 16, 131, 3, 564, 68, 11, 17, 790, 5, 26, 7999, 2, 1])]\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cllZB743UE4c"
+      },
+      "source": [
+        "class RNNNumpy:\n",
+        "  def __init__(self, word_dim, hidden_dim=100, bptt_trucate=4):\n",
+        "    self.word_dim = word_dim\n",
+        "    self.hidden_dim = hidden_dim\n",
+        "    self.bptt_trucate = bptt_trucate\n",
+        "\n",
+        "    self.U = np.random.uniform(-np.sqrt(1./word_dim), np.sqrt(1./word_dim), (hidden_dim, word_dim))\n",
+        "    self.V = np.random.uniform(-np.sqrt(1./hidden_dim), np.sqrt(1./hidden_dim), (word_dim, hidden_dim))\n",
+        "    self.W = np.random.uniform(-np.sqrt(1./hidden_dim), np.sqrt(1./hidden_dim), (hidden_dim, hidden_dim))\n",
+        "\n",
+        "  def forward_propagation(self, x):\n",
+        "    T = len(x)\n",
+        "\n",
+        "    s = np.zeros((T + 1, self.hidden_dim))\n",
+        "    s[-1] = np.zeros(self.hidden_dim)\n",
+        "\n",
+        "    o = np.zeros((T, self.word_dim))\n",
+        "\n",
+        "    for t in np.arange(T):\n",
+        "      s[t] = np.tanh(self.U[:,x[t]] + self.W.dot(s[t-1]))\n",
+        "      o[t] = softmax(self.V.dot(s[t]))\n",
+        "    return [o, s]\n",
+        "\n",
+        "  def predict(self, x):\n",
+        "    o, s = self.forward_propagation(x)\n",
+        "    return np.argmax(o, axis = 1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a27_kdzwVg8A"
+      },
+      "source": [
+        "RNNNumpy.forward_propagation = forward_propagation"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8l4_6eamVnNz"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jBW0kx0KVtvS"
+      },
+      "source": [
+        "RNNNumpy.predict = predict"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j_qTqjBfVxRr",
+        "outputId": "0ef058b4-b51e-4dd9-e784-d4d1bddc09c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 337
+        }
+      },
+      "source": [
+        "np.random.seed(10)\n",
+        "model = RNNNumpy(vocabulary_size)\n",
+        "o, s = model.forward_propagation(x_train[10])\n",
+        "print(o.shape)\n",
+        "print(o)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-18-3c3fe552c1f5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRNNNumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvocabulary_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward_propagation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-16-8c8fe5c8cd62>\u001b[0m in \u001b[0;36mforward_propagation\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m       \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtanh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mU\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m       \u001b[0mo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoftmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mV\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'softmax' is not defined"
+          ]
         }
       ]
     }
